# vaktijars

./: Cargo.toml  README.md  cities15000.csv  eot.py  sd.py  tailwind.config.js
public/: landing.js  vaktija.js
src/: lib.rs  main.rs
templates/: active_search.html  base.html  landing.html  vaktija.html
