[package]
name = "vaktijars"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["query", "macros", "tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
askama = "0.14.0"
askama_web = { version = "0.14.3", features = ["axum-0.8"] }
tower-http = { version = "0.6.6", features = ["fs", "compression-br"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.19", features = ["brotli"] }
# axum-client-ip = "1.1.3"
