[package]
name = "vaktijars"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["query", "macros", "tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
askama = "0.14.0"
askama_web = { version = "0.14.3", features = ["axum-0.8"] }
tower-http = { version = "0.6.6", features = [
  "fs",
  "compression-br",
  "compression-gzip",
] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.41"
julian = { version = "0.7.0", features = ["chrono"] }
rstar = "0.12.2"
csv = "1.3.1"
edit-distance = "2.1.3"
# axum-client-ip = "1.1.3"
